# xournal

./: .gitignore  CMakeLists.txt
po/: ca.po  cs.po  de.po  es.po  fr.po  it.po  nl.po  pt_BR.po
src/: xo-paint.c
